--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 iced = "0.13.1"
+serde = {  version = "1.0.216" , features = ["derive"] }
+serde_yaml = "0.9.34+deprecated"
