--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 iced = "0.13.1"
 serde = {  version = "1.0.216" , features = ["derive"] }
 serde_yaml = "0.9.34+deprecated"
+rand = "0.8.5"
