--- a/rustern-battle-data/example.yml
+++ b/rustern-battle-data/example.yml
@@ -1,29 +1,89 @@
-enemies:
-  enemies:
-    - name: "ラット"
-      level:
-        value: 1
-      hp: 25.0
-    - name: "ゴブリン"
-      level:
-        value: 1
-      hp: 30.0
-    - name: "スライム"
-      level:
-        value: 1
-      hp: 20.0
-    - name: "グラスホッパー"
-      level:
-        value: 1
-      hp: 15.0
-    - name: "トロール"
-      level:
-        value: 2
-      hp: 120.0
-    - name: "ドラゴン"
-      level:
-        value: 3
-      hp: 300.0
+characters:
+  characters:
+      - name: "スライム"
+        level:
+          value: 1
+        hp: 100.0
+        hp_max: 10.0
+        attack: 2.0
+        defence: 1.0
+        turn_of_poisoned: 0
+        turn_of_burned: 0
+        turn_of_falter: 0
+        turn_of_blackout: 0
+        turn_of_frost: 0
+        turn_of_feather: 0
+        skills:
+          skills:
+            - name: "かみつく"
+              rarity:
+                value: 1
+              effect: !Attack
+                - percentage: 80
+                - value: 5.0
+      - name: "ゴブリン"
+        level:
+          value: 2
+        hp: 20.0
+        hp_max: 20.0
+        attack: 5.0
+        defence: 3.0
+        turn_of_poisoned: 0
+        turn_of_burned: 0
+        turn_of_falter: 0
+        turn_of_blackout: 0
+        turn_of_frost: 0
+        turn_of_feather: 0
+        skills:
+          skills:
+            - name: "パンチ"
+              rarity:
+                value: 1
+              effect: !Attack
+                - percentage: 90
+                - value: 7.0
+      - name: "オーク"
+        level:
+          value: 3
+        hp: 30.0
+        hp_max: 30.0
+        attack: 8.0
+        defence: 5.0
+        turn_of_poisoned: 0
+        turn_of_burned: 0
+        turn_of_falter: 0
+        turn_of_blackout: 0
+        turn_of_frost: 0
+        turn_of_feather: 0
+        skills:
+          skills:
+            - name: "たたきつける"
+              rarity:
+                value: 2
+              effect: !Attack
+                - percentage: 85
+                - value: 10.0
+      - name: "ドラゴン"
+        level:
+          value: 5
+        hp: 100.0
+        hp_max: 100.0
+        attack: 20.0
+        defence: 15.0
+        turn_of_poisoned: 0
+        turn_of_burned: 0
+        turn_of_falter: 0
+        turn_of_blackout: 0
+        turn_of_frost: 0
+        turn_of_feather: 0
+        skills:
+          skills:
+            - name: "ファイアブレス"
+              rarity:
+                value: 3
+              effect: !Attack
+                - percentage: 95
+                - value: 25.0
 
 items:
   items:
@@ -31,50 +91,29 @@ items:
       rarity:
         value: 1
       effect: !Heal
-        percentage: 0.25
+        percentage: 0.2
     - name: "エリクサー"
       rarity:
-        value: 1
+        value: 2
       effect: !Heal
-        percentage: 0.50
-    - name: "ほのおのばくだん"
-      rarity:
-        value: 1
-      effect: !Attack
-        - percentage: 0.8
-        - value: 50.0
+        percentage: 0.5
 
 skills:
   skills:
-    - name: "ダッシュづき"
+    - name: "ファイアボール"
       rarity:
         value: 1
       effect: !Attack
-        - percentage: 0.8
-        - value: 40.0
-    - name: "きりつけ"
+        - percentage: 70
+        - value: 10.0
+    - name: "アクアボール"
       rarity:
         value: 1
       effect: !Attack
-        - percentage: 0.9
-        - value: 30.0
-    - name: "ジャンプぎり"
+        - percentage: 70
+        - value: 5.0
+    - name: "ヒール"
       rarity:
         value: 1
-      effect: !Attack
-        - percentage: 0.3
-        - value: 90.0
-    - name: "こおりのやり"
-      rarity:
-        value: 2
-      effect: !AttackAndAddSpecialStatusToEnemy
-        - percentage: 0.7
-        - value: 20.0
-        - percentage: 0.5
-        - Frozen
-    - name: "どくのくも"
-      rarity:
-        value: 3
-      effect: !AddSpecialStatusToEnemy
-        - percentage: 0.6
-        - Poisoned
+      effect: !Heal
+        percentage: 0.3
